src/app/shopping-cart/shopping-cart.component.css
body {
  background: #ddd;
  min-height: 100vh;
  vertical-align: middle;
  display: flex;
  font-size: 0.8rem;
  font-weight: bold;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

.title {
  margin-bottom: 5vh;
}

.card {
  margin: auto;
  max-width: 1800px;
  width: 90%;
  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-radius: 1rem;
  border: transparent;
  margin-top: 100px;
}

@media (max-width: 767px) {
  .card {
    margin: 3vh auto;
  }
}

.cart {
  background-color: #fff;
  padding: 4vh 5vh;
  border-bottom-left-radius: 1rem;
  border-top-left-radius: 1rem;
}

@media (max-width: 767px) {
  .cart {
    padding: 0.3vh;
    padding-top: 3vh;
    border-bottom-left-radius: unset;
    border-top-right-radius: 1rem;
  }

  .card {
    margin-top: 75px;
  }
}

.summary {
  background-color: #ddd;
  border-top-right-radius: 1rem;
  border-bottom-right-radius: 1rem;
  padding: 4vh;
  color: rgb(65, 65, 65);
}

@media (max-width: 767px) {
  .summary {
    border-top-right-radius: unset;
    border-bottom-left-radius: 1rem;
  }
}

.summary .col-2 {
  padding: 0;
}

.summary .col-10 {
  padding: 0;
}

.row {
  margin: 0;
  font-size: 1rem;
  line-height: 1rem;
  border-radius: 10px;
  margin-bottom: 0.6rem;
}

.title b {
  font-size: 1.5rem;
}

.main {
  margin: 0;
  padding: 2vh 0;
  width: 100%;
}

.col-2,
.col {
  padding: 0 1vh;
}

a {
  padding: 0 1vh;
}

.close {
  margin-left: auto;
  font-size: 0.7rem;
  cursor: pointer;
}

.close:hover {
  color: tomato;
  transform: scale(1.05);
}

img {
  /* height: 5rem; */
  border-radius: 0.8rem;
  object-fit: cover;
}

.back-to-shop {
  margin-top: 4.5rem;
}

h5 {
  margin-top: 4vh;
}

hr {
  margin-top: 1.25rem;
}

form {
  padding: 2vh 0;
}

select {
  border: 1px solid rgba(0, 0, 0, 0.137);
  padding: 1.5vh 1vh;
  margin-bottom: 4vh;
  outline: none;
  width: 100%;
  background-color: rgb(247, 247, 247);
}

input {
  border: 1px solid rgba(0, 0, 0, 0.137);
  padding: 1vh;
  margin-bottom: 4vh;
  outline: none;
  width: 100%;
  background-color: rgb(247, 247, 247);
}

input:focus::-webkit-input-placeholder {
  color: transparent;
}

.btn {
  background-color: #000;
  border-color: #000;
  color: white;
  width: 100%;
  font-size: 0.7rem;
  margin-top: 4vh;
  padding: 1vh;
  border-radius: 0;
}

.btn:focus {
  box-shadow: none;
  outline: none;
  box-shadow: none;
  color: white;
  -webkit-box-shadow: none;
  /* -webkit-user-select: none; */
  transition: none;
}

.btn:hover {
  color: white;
  transform: scale(1.04);
  animation: transform 1s ease-out;
}

a {
  color: black;
}

a:hover {
  color: black;
  text-decoration: none;
}

#code {
  background-image: linear-gradient(to left, rgba(255, 255, 255, 0.253), rgba(255, 255, 255, 0.185)), url("https://img.icons8.com/small/16/000000/long-arrow-right.png");
  background-repeat: no-repeat;
  background-position-x: 95%;
  background-position-y: center;
}

.btn-quantity {
  outline: none;
  border: none;
  padding: 0;
  width: 4vw;
  margin-left: 10px;
  margin-right: 10px;
  color: white;
  background-color: rgb(109, 109, 109);
  max-width: 20px;
  margin-bottom: 5px;
  border-radius: 2vw;
}

.btn-secondary {
  background-color: rgb(139, 139, 139);
  outline: 0;
  border-radius: 5px;
  padding: 7px 10px;
  margin-right: 10px;
  border: none;
}

.btn-secondary:hover {
  background-color: tomato;
  outline: 0;
  border-color: tomato;
}

.scroll {
  max-height: 48vh;
  overflow-y: auto;
}

.btn-plus:hover {
  background-color: rgba(0, 165, 8, 0.808);
  color: white;
}

.btn-minus:hover {
  background-color: rgba(255, 73, 41, 0.726);
  color: white;
}

